--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <div class="hero-body">
     <div class="container">
       <!-- Paper video. -->
-      <h2 class="title is-3">Demo Vedio</h2>
+      <h2 class="title is-3">Demo Video</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
 
