--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Xiaopeng Zhao</a>,</span>
+                <a href="https://xpengzhao.github.io" target="_blank">Xiaopeng Zhao</a>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Zhenlin An</a>,</span>
+                  <a href="https://anplus.github.io/" target="_blank">Zhenlin An</a>,</span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Qingrui Pan</a>,</span>
                     <span class="author-block">
